--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -1,104 +1,118 @@
-<div class="mb-1" fxLayout="row" fxLayoutAlign="space-between center">
-  <!-- Title -->
-  <h2 class="m-0" mat-dialog-title>{{(data.idStudent ? 'EDIT_STUDENT' : 'ADD_STUDENT') | translate}}</h2>
+<form [formGroup]="studentFormGroup" autocomplete="off" class="mat-typography">
+  <header class="dialog-header padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="space-between center">
+    <!-- Title -->
+    <h2 class="m-0" mat-dialog-title>
+      {{(data.idStudent ? 'EDIT_STUDENT' : 'ADD_STUDENT') | translate}}
+    </h2>
 
-  <!-- Cloase dialog button -->
-  <button class="button-close" mat-icon-button attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">
-    <fa-icon class="mat-icon-22 mat-hint" icon="times"></fa-icon>
-  </button>
-</div>
+    <!-- Favorite -->
+    <button mat-button (click)="student.favorite=!student.favorite" [matTooltip]="'MSG.MARK_STUDENT_FAV' | translate" [matTooltipShowDelay]="650">
+      <span class="mat-small mat-hint mr-q"> {{(student?.favorite ? 'FAVORITE'  : 'MARK_FAVORITE') | translate}} </span>
+      <fa-icon [ngClass]="{'star-active': student?.favorite}" class="mat-icon-22 mat-hint" icon="star"></fa-icon>
+    </button>
+  </header>
 
-<mat-dialog-content class="mat-typography">
+  <section class="dialog-content padding-content-h">
 
-  <form [formGroup]="studentFormGroup" autocomplete="off">
+    <!--PERSONAL -->
+    <div formGroupName="personalFormGroup" fxLayout="column" class="mb-2">
 
-    <!-- STUDENT -->
-    <h3 class="mat-h2 mat-hint">{{'STUDENT_PERSONAL_DATA' | translate}}</h3>
-    <div formGroupName="personalFormGroup" class="mb-2 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="start center">
+      <h3 class="mat-h2 mat-hint">{{'STUDENT_PERSONAL_DATA' | translate}}</h3>
 
-      <!-- Avatar -->
-      <a13-pickup-image ngClass.xs="full-avatar mb-1 pb-h" class="avatar-selected" [(image)]="studentAvatar" [imageList]="avatars" fxFlex="nogrow">
-      </a13-pickup-image>
+      <div class="mb-q" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
 
-      <div class="f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxFlex ngClass.xs="full">
+        <!-- Avatar -->
+        <a13-pickup-image ngClass.xs="full-avatar mb-1 pb-h" class="avatar-selected" [(image)]="studentAvatar" [imageList]="avatars" fxFlex="20">
+        </a13-pickup-image>
 
-        <!-- Name -->
-        <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="100">
-          <mat-label>{{'FORM.NAME' | translate}}{{'AND' | translate}} {{'FORM.SURNAME' | translate | lowercase}}
-          </mat-label>
-          <input matInput required formControlName="nameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}" autocomplete="off">
-          <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="font"></fa-icon>
-        </mat-form-field>
+        <div class="mb-q full" fxLayout="column" fxLayoutAlign="start" fxFlex="80">
 
-        <!-- Birthdate -->
-        <mat-form-field class="mb-1" [appearance]="'inputAppearance' | settingValue" fxFlex="50">
-          <mat-label>{{'FORM.BIRTHDATE' | translate}}</mat-label>
-          <input class="pl-h" matInput formControlName="birthdateCtrl" [matDatepicker]="birthdatePicker" [max]="maxDate">
-          <mat-datepicker #birthdatePicker></mat-datepicker>
-          <mat-datepicker-toggle class="mat-hint" matPrefix [for]="birthdatePicker">
-          </mat-datepicker-toggle>
-          <mat-hint align="start">{{'HINT.BIRTHDATE' | translate}}</mat-hint>
-        </mat-form-field>
+          <!-- Name -->
+          <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="100">
+            <mat-label>{{'FORM.NAME' | translate}}{{'AND' | translate}} {{'FORM.SURNAME' | translate | lowercase}}
+            </mat-label>
+            <input matInput required formControlName="nameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}" autocomplete="off">
+            <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="font"></fa-icon>
+          </mat-form-field>
 
-        <!-- Academic course -->
-        <mat-form-field class="mb-1" [appearance]="'inputAppearance' | settingValue" fxFlex="50">
-          <mat-label>{{'FORM.ACADEMIC_COURSE' | translate}}</mat-label>
-          <mat-select formControlName="academicCourseCtrl" [compareWith]="equals" attr.aria-label="{{'FORM.ACADEMIC_COURSE' | translate}}">
-            <mat-option>-- {{'NONE' | translate}} --</mat-option>
-            <mat-optgroup *ngFor="let group of academicCourses" [label]="group.name | translate">
-              <mat-option *ngFor="let course of group.group" [value]="course">
-                {{course.viewValue}} {{group.name | translate | lowercase}}
-              </mat-option>
-            </mat-optgroup>
-          </mat-select>
-          <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="school"></fa-icon>
-        </mat-form-field>
+          <div fxLayout="row">
+
+            <!-- Birthdate -->
+            <mat-form-field class="mb-1" [appearance]="'inputAppearance' | settingValue" fxFlex="50">
+              <mat-label>{{'FORM.BIRTHDATE' | translate}}</mat-label>
+              <input class="pl-h" matInput formControlName="birthdateCtrl" [matDatepicker]="birthdatePicker" [max]="maxDate">
+              <mat-datepicker #birthdatePicker></mat-datepicker>
+              <mat-datepicker-toggle class="mat-hint" matPrefix [for]="birthdatePicker">
+              </mat-datepicker-toggle>
+              <mat-hint align="start">{{'HINT.BIRTHDATE' | translate}}</mat-hint>
+            </mat-form-field>
+
+            <!-- Academic course -->
+            <mat-form-field class="pl-h mb-1" [appearance]="'inputAppearance' | settingValue" fxFlex="50">
+              <mat-label>{{'FORM.ACADEMIC_COURSE' | translate}}</mat-label>
+              <mat-select formControlName="academicCourseCtrl" [compareWith]="equals" attr.aria-label="{{'FORM.ACADEMIC_COURSE' | translate}}">
+                <mat-option>-- {{'NONE' | translate}} --</mat-option>
+                <mat-optgroup *ngFor="let group of academicCourses" [label]="group.name | translate">
+                  <mat-option *ngFor="let course of group.group" [value]="course">
+                    {{course.viewValue}} {{group.name | translate | lowercase}}
+                  </mat-option>
+                </mat-optgroup>
+              </mat-select>
+              <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="school"></fa-icon>
+            </mat-form-field>
+          </div>
+        </div>
       </div>
 
       <!-- Details -->
-      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="100">
+      <mat-form-field fxFlex="100" [appearance]="'inputAppearance' | settingValue">
         <mat-label>{{'FORM.OBSERVATIONS' | translate}}</mat-label>
-        <textarea matInput formControlName="observationsCtrl" rows="4"></textarea>
+        <textarea matInput formControlName="observationsCtrl" rows="5"></textarea>
         <!-- <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="file-alt"></fa-icon> -->
         <mat-hint align="start">{{'HINT.OBSERVATIONS' | translate}}</mat-hint>
       </mat-form-field>
     </div>
 
     <!-- CONTACT INFORMATION -->
-    <h3 class="mat-h2 mat-hint">{{'CONTACT.TITLE' | translate}}</h3>
-    <div formGroupName="contactInformationFormGroup" class="mb-2 mt-1">
+    <div formGroupName="contactInformationFormGroup" fxLayout="column" class="mb-2">
+      <h3 class="mat-h2 mat-hint">{{'CONTACT.TITLE' | translate}}</h3>
 
       <!-- Phones -->
       <div class="phone-list" *ngIf="arrayPhones.controls" formArrayName="phonesFormArray">
-        <div *ngFor="let phone of arrayPhones.controls; let i = index" fxLayout="row" fxLayoutAlign="space-between center">
+        <div class="phone" *ngFor="let phone of arrayPhones.controls; let i = index" fxLayout="row" fxLayoutAlign="start center">
 
           <ng-container formGroupName="{{i}}">
 
-            <!-- Name -->
-            <mat-form-field fxFlex="45" [appearance]="'inputAppearance' | settingValue">
-              <mat-label>{{'FORM.NAME' | translate}}</mat-label>
-              <input matInput formControlName="contactPhoneNameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}" maxlength="20" autocomplete="off">
-              <!-- <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="user"></fa-icon> -->
-            </mat-form-field>
+            <div fxLayout="row" fxFlex="calc(100% - 3rem)">
 
-            <!-- Phone -->
-            <mat-form-field fxFlex="45" [appearance]="'inputAppearance' | settingValue">
-              <mat-label>{{'FORM.PHONE' | translate}}</mat-label>
-              <input matInput formControlName="contactPhoneNumberCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}" autocomplete="off">
-              <!-- <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="phone-alt"></fa-icon> -->
-            </mat-form-field>
+              <!-- Name -->
+              <mat-form-field fxFlex="50" [appearance]="'inputAppearance' | settingValue" class="pr-h">
+                <mat-label>{{'FORM.NAME' | translate}}</mat-label>
+                <input matInput formControlName="contactPhoneNameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}" maxlength="20" autocomplete="off">
+                <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="user"></fa-icon>
+              </mat-form-field>
+
+              <!-- Phone -->
+              <mat-form-field fxFlex="50" [appearance]="'inputAppearance' | settingValue">
+                <mat-label>{{'FORM.PHONE' | translate}}</mat-label>
+                <input matInput formControlName="contactPhoneNumberCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}" autocomplete="off">
+                <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="phone-alt"></fa-icon>
+              </mat-form-field>
+            </div>
 
             <!-- Delete phone -->
-            <button mat-icon-button color="warn" class="mb-1" attr.aria-label="{{'DELETE' | translate}}" (click)="removePhone(i)">
-              <fa-icon class="mat-icon-18" icon="trash"></fa-icon>
-            </button>
+            <div class="pl-q mb-1">
+              <button mat-icon-button color="warn" class="action-button delete-phone-button" attr.aria-label="{{'DELETE' | translate}}" (click)="removePhone(i)">
+                <fa-icon class="mat-icon-18" icon="trash"></fa-icon>
+              </button>
+            </div>
           </ng-container>
         </div>
       </div>
 
       <!-- New phone -->
       <div class="pl-q pr-q" fxLayout="row" fxLayoutAlign="end center">
-        <button class="button-text-icon" mat-stroked-button attr.arial-label="{{'DELETE' | translate}}" (click)="addPhone(null, true)" [disabled]="arrayPhones.invalid">
+        <button class="button-text-icon" mat-flat-button attr.arial-label="{{'DELETE' | translate}}" (click)="addPhone(null, true)" [disabled]="arrayPhones.invalid">
           <span class="text-button mat-hint mr-1">{{'HINT.ADD_NEW_PHONE' | translate}}</span>
           <fa-icon class="mat-icon-18" icon="plus"></fa-icon>
         </button>
@@ -106,29 +120,32 @@
     </div>
 
     <!-- MUSICAL -->
-    <h3 class="mat-h2 mat-hint">{{'STUDENT_CONSERVATORY_DATA' | translate}}</h3>
-    <div formGroupName="musicalFormGroup" class="mb-H mt-1 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+    <div formGroupName="musicalFormGroup" fxLayout="column" class="mb-2">
+      <h3 class="mat-h2 mat-hint">{{'STUDENT_CONSERVATORY_DATA' | translate}}</h3>
 
-      <!-- Conservatory course -->
-      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="50">
-        <mat-label>{{'FORM.CONSERVATORY_COURSE' | translate}}</mat-label>
-        <mat-select formControlName="courseCtrl" [compareWith]="equals" attr.aria-label="{{'FORM.CONSERVATORY_COURSE' | translate}}">
-          <mat-option>-- {{'NONE' | translate}} --</mat-option>
-          <mat-optgroup *ngFor="let group of conservatoryCourses" [label]="group.name | translate">
-            <mat-option *ngFor="let course of group.group" [value]="course">
-              {{course.viewValue}} {{group.name | translate | lowercase}}
-            </mat-option>
-          </mat-optgroup>
-        </mat-select>
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="graduation-cap"></fa-icon>
-      </mat-form-field>
+      <div fxLayout="row">
 
-      <!-- Teacher-->
-      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="50">
-        <mat-label>{{'FORM.CONSERVATORY_TEACHER' | translate}}</mat-label>
-        <input matInput formControlName="teacherCtrl" attr.aria-label="{{'FORM.CONSERVATORY_TEACHER' | translate}}" autocomplete="off">
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="chalkboard-teacher"></fa-icon>
-      </mat-form-field>
+        <!-- Conservatory course -->
+        <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="50">
+          <mat-label>{{'FORM.CONSERVATORY_COURSE' | translate}}</mat-label>
+          <mat-select formControlName="courseCtrl" [compareWith]="equals" attr.aria-label="{{'FORM.CONSERVATORY_COURSE' | translate}}">
+            <mat-option>-- {{'NONE' | translate}} --</mat-option>
+            <mat-optgroup *ngFor="let group of conservatoryCourses" [label]="group.name | translate">
+              <mat-option *ngFor="let course of group.group" [value]="course">
+                {{course.viewValue}} {{group.name | translate | lowercase}}
+              </mat-option>
+            </mat-optgroup>
+          </mat-select>
+          <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="graduation-cap"></fa-icon>
+        </mat-form-field>
+
+        <!-- Teacher-->
+        <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="50" class="pl-h">
+          <mat-label>{{'FORM.CONSERVATORY_TEACHER' | translate}}</mat-label>
+          <input matInput formControlName="teacherCtrl" attr.aria-label="{{'FORM.CONSERVATORY_TEACHER' | translate}}" autocomplete="off">
+          <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="chalkboard-teacher"></fa-icon>
+        </mat-form-field>
+      </div>
 
       <!-- Instrument -->
       <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="100">
@@ -147,38 +164,50 @@
     </div>
 
     <!-- CLASSROOM -->
-    <h3 class="mat-h2 mat-hint">{{'CLASSROOM.NAME' | translate}}</h3>
-    <div formGroupName="classroomFormGroup" class="mb-H mt-1 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+    <div formGroupName="classroomFormGroup" fxLayout="column" class="mb-2">
+      <h3 class="mat-h2 mat-hint">{{'CLASSROOM.NAME' | translate}}</h3>
 
-      <!-- Classroom -->
-      <mat-form-field class="mb-1" [appearance]="'inputAppearance' | settingValue" fxFlex="50">
-        <mat-label>{{'CLASSROOMS' | translate}}</mat-label>
-        <mat-select formControlName="classroomsCtrl" multiple attr.aria-label="{{'CLASSROOMS' | translate}}">
-          <mat-option *ngFor="let classroom of classroomList" [value]="classroom.id">
-            {{classroom.name}}
-          </mat-option>
-        </mat-select>
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="chalkboard"></fa-icon>
-        <mat-hint align="start">{{'HINT.CLASSROOM' | translate}}</mat-hint>
-      </mat-form-field>
+      <div fxLayout="row" fxLayout.xs="column" fxLayoutGap=".5rem">
+        <!-- Classroom -->
+        <mat-form-field class="mb-1" [appearance]="'inputAppearance' | settingValue" fxFlex="50" fxFlex.xs="100">
+          <mat-label>{{'CLASSROOMS' | translate}}</mat-label>
+          <mat-select formControlName="classroomsCtrl" multiple attr.aria-label="{{'CLASSROOMS' | translate}}">
+            <mat-option *ngFor="let classroom of classroomList" [value]="classroom.id">
+              {{classroom.name}}
+            </mat-option>
+          </mat-select>
+          <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="chalkboard"></fa-icon>
+          <mat-hint align="start">{{'HINT.CLASSROOM' | translate}}</mat-hint>
+        </mat-form-field>
 
-      <!-- Subjects -->
-      <mat-form-field class="mb-1" [appearance]="'inputAppearance' | settingValue" fxFlex="50">
-        <mat-label>{{'FORM.SUBJECTS' | translate}}</mat-label>
-        <mat-select formControlName="subjectsCtrl" multiple attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
-          <mat-option *ngFor="let subject of subjectList" [value]="subject.id">
-            {{subject.name}}
-          </mat-option>
-        </mat-select>
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="book"></fa-icon>
-        <mat-hint align="start">{{'HINT.SUBJECTS' | translate}}</mat-hint>
-      </mat-form-field>
+        <!-- Subjects -->
+        <mat-form-field class="mb-1" [appearance]="'inputAppearance' | settingValue" fxFlex="50" fxFlex.xs="100">
+          <mat-label>{{'FORM.SUBJECTS' | translate}}</mat-label>
+          <mat-select formControlName="subjectsCtrl" multiple attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
+            <mat-option *ngFor="let subject of subjectList" [value]="subject.id">
+              {{subject.name}}
+            </mat-option>
+          </mat-select>
+          <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="book"></fa-icon>
+          <mat-hint align="start">{{'HINT.SUBJECTS' | translate}}</mat-hint>
+        </mat-form-field>
+      </div>
     </div>
-  </form>
 
-</mat-dialog-content>
+  </section>
 
-<mat-dialog-actions align="end">
-  <button mat-button color="warn" (click)="cancel()" attr.aria-label="{{'CANCEL' | translate}}">{{'CANCEL' | translate}}</button>
-  <button class="ml-h" mat-flat-button color="primary" mat-dialog-close [disabled]="studentFormGroup.invalid" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{'SAVE' | translate}}</button>
-</mat-dialog-actions>
+  <footer class="dialog-footer padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="space-between center">
+
+    <!-- Archived -->
+    <button mat-button (click)="student.archived=!student.archived" [matTooltip]="'ARCHIVE_STUDENT' | translate" [matTooltipShowDelay]="650">
+      <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'error-color': student?.archived}" [icon]="student?.archived ? 'box' : 'box-open'"></fa-icon>
+      <span class="mat-small mat-hint ml-q"> {{(student?.archived ? 'STUDENT_ARCHIVED'  : 'ARCHIVE') | translate}} </span>
+    </button>
+
+    <!-- Action buttons -->
+    <div>
+      <button mat-button color="warn" attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">{{'CANCEL' | translate}}</button>
+      <button class="ml-h" mat-flat-button color="primary" mat-dialog-close [disabled]="studentFormGroup.invalid" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{'SAVE' | translate}}</button>
+    </div>
+  </footer>
+</form>
