--- a/src/app/classroom/components/subject-creation/subject-creation.component.html
+++ b/src/app/classroom/components/subject-creation/subject-creation.component.html
@@ -1,24 +1,24 @@
-<div class="mb-1" fxLayout="row" fxLayoutAlign="space-between center">
+<form [formGroup]="subjectFormGroup" autocomplete="off" class="mat-typography">
+  <header class="dialog-header padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="space-between center">
+    <!-- Title -->
+    <h2 class="m-0" mat-dialog-title>
+      {{(data?.entity?.id ? 'EDIT_SUBJECT' : 'CREATE_SUBJECT') | translate}}
+    </h2>
 
-  <!-- Title -->
-  <h2 class="m-0" mat-dialog-title>{{(data?.entity?.id ? 'EDIT_SUBJECT' : 'CREATE_SUBJECT') | translate}}</h2>
+    <!-- Close dialog -->
+    <button class="button-close" mat-icon-button attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">
+      <fa-icon class="mat-icon-22 mat-hint" icon="times"></fa-icon>
+    </button>
+  </header>
 
-  <!-- Close dialog button -->
-  <button class="button-close" mat-icon-button attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">
-    <fa-icon class="mat-icon-22 mat-hint" icon="times"></fa-icon>
-  </button>
-</div>
+  <section class="dialog-content" fxLayout="column" fxLayoutAlign="start">
+    <!-- Subtitle -->
+    <p class="padding-content-h mb-h pb-h mat-hint">{{'SUBJECT.CREATION_SUBTITLE' | translate}}.</p>
 
-<mat-dialog-content class="mat-typography">
-
-  <p class="mb-1 pb-h mat-hint">{{'SUBJECT.CREATION_SUBTITLE' | translate}}.</p>
-
-  <form [formGroup]="subjectFormGroup" autocomplete="off">
-
-    <div class="f-wrap" fxLayout="column">
+    <div class="padding-content-h mb-q" fxLayout="row wrap" fxLayoutAlign="space-between center">
 
       <!-- Name -->
-      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="100">
+      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="40" fxFlex.xs="100">
         <mat-label>{{'FORM.SUBJECTS_NAME' | translate}}
         </mat-label>
         <input matInput required formControlName="nameCtrl" attr.aria-label="{{'FORM.SUBJECTS_NAME' | translate}}" autocomplete="off">
@@ -32,14 +32,15 @@
       </mat-form-field>
 
       <!-- Student list -->
-      <a13-select-student [multiple]="true" formControlName="studentListCtrl" hint="HINT.SUBJECT_STUDENT_LIST">
+      <a13-select-student [multiple]="true" formControlName="studentListCtrl" hint="HINT.SUBJECT_STUDENT_LIST" fxFlex="59" fxFlex.xs="100">
       </a13-select-student>
     </div>
-  </form>
 
-</mat-dialog-content>
+  </section>
 
-<mat-dialog-actions align="end">
-  <button mat-button color="warn" (click)="cancel()" attr.aria-label="{{'CANCEL' | translate}}">{{'CANCEL' | translate}}</button>
-  <button class="ml-h" mat-flat-button color="primary" mat-dialog-close [disabled]="subjectFormGroup.invalid || validatingName" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{'SAVE' | translate}}</button>
-</mat-dialog-actions>
+  <footer class="dialog-footer padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="end center">
+    <!-- Action buttons -->
+    <button mat-button color="warn" attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">{{'CANCEL' | translate}}</button>
+    <button class="ml-h" mat-flat-button color="primary" mat-dialog-close [disabled]="subjectFormGroup.invalid || validatingName" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{'SAVE' | translate}}</button>
+  </footer>
+</form>
