--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -1,5 +1,5 @@
 <section class="container container-nopadd">
-  <header #profileHeader class="profile-header shadow-bottom padding-content pb-h mat-card mat-elevation-z0">
+  <header #profileHeader class="profile-header mat-card shadow-bottom padding-content pb-h mat-elevation-z0">
 
     <div class="container-max sm mt-h" fxLayout="row">
       <div class="avatar-container mr-q" fxLayout="column" fxLayoutAlign="start center">
@@ -30,17 +30,17 @@
             <!-- Number info -->
             <div class="mb-q" fxLayout="row wrap" fxLayoutGap="1rem">
               <div fxLayout="row" *ngIf="student?.personal?.birthdate" class="personal-numbers">
-                <span class="mb-0">{{student?.personal?.birthdate | age}}</span>
+                <span class="mb-0 mr-q">{{student?.personal?.birthdate | age}}</span>
                 <span class="mat-hint mat-small"> {{'YEARS' | translate}}</span>
               </div>
               <div fxLayout="row" *ngIf="student?.personal?.academicCourse" class="personal-numbers">
-                <span class="mb-0">{{student?.personal?.academicCourse?.viewValue}}</span>
+                <span class="mb-0 mr-q">{{student?.personal?.academicCourse?.viewValue}}</span>
                 <span class="mat-hint mat-small">
                   {{student?.personal?.academicCourse?.id | group: academicCourseList | translate | lowercase}}
                 </span>
               </div>
               <div fxLayout="row" *ngIf="student?.musical?.course" class="personal-numbers">
-                <span class="mb-0">{{student?.musical?.course.viewValue}}</span>
+                <span class="mb-0 mr-q">{{student?.musical?.course.viewValue}}</span>
                 <span class="mat-hint mat-small">
                   {{student?.musical?.course?.id | group: conservatoryCourseList | translate | lowercase}}
                 </span>
@@ -117,14 +117,14 @@
 
       <!-- Days -->
       <mat-tab>
-        <ng-template mat-tab-label>
+        <ng-template mat-tab-label class="stiky-top">
           <fa-icon class="mat-icon-20" icon="calendar-day"></fa-icon>
         </ng-template>
         <div class="padding-content">
 
-          <a13-day-filters [dayList]="dayList" (dayListFilter)="dayListFiltered=$event"></a13-day-filters>
+          <a13-day-filters *ngIf="dayList?.length" [dayList]="dayList" (dayListFilter)="dayListFiltered=$event"></a13-day-filters>
 
-          <div class="mt-1">
+          <div>
             <ng-container *ngFor="let day of dayListFiltered">
               <button *ngIf="day.firstOfMonth" mat-button class="mat-hint first-of-month">
                 <span *ngIf="day.thisYear">{{ day.date | date: 'MMMM' }}</span>
@@ -134,21 +134,18 @@
             </ng-container>
           </div>
 
-          <!-- Empty list -->
-          <h3 *ngIf="!dayListFiltered?.length" class="txt-5 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}</h3>
-
-          <!-- List length > 0 -->
-          <h3 *ngIf="dayListFiltered?.length" class="mt-3 txt-center mat-hint">{{'MSG.NO_MORE_DAYS' | translate}}</h3>
+          <!-- Empty list messages -->
+          <a13-empty-list *ngIf="dayList" [list]="dayList" [listFiltered]="dayListFiltered" listMessage="MSG.STUDENT_DAY_LIST_EMPTY" listFilteredMessage="MSG.NO_MORE_DAYS"></a13-empty-list>
 
           <!-- Floating button -->
-          <a13-floating-button text="DAY.ADD" icon="edit" (click)="createDay()">
+          <a13-floating-button [pulse]="!dayList?.length" text="DAY.ADD" tooltip="DAY.ADD" icon="edit" (click)="createDay()">
           </a13-floating-button>
         </div>
       </mat-tab>
 
       <!-- Marks -->
       <mat-tab>
-        <ng-template mat-tab-label>
+        <ng-template mat-tab-label class="stiky-top">
           <fa-icon class="mat-icon-20" icon="poll"></fa-icon>
         </ng-template>
         <div class="padding-content">
