--- a/src/app/classroom/students/components/student-creation/student-creation.component.scss
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.scss
@@ -1,8 +1,3 @@
-mat-form-field {
-  width: 100%;
-  padding: 0 5px;
-}
-
 .avatar-selected {
   padding: 0 5px;
   max-width: 130px;
@@ -20,6 +15,18 @@ mat-form-field {
   width: 100%;
   max-width: 100%;
 }
+
+.phone-list {
+
+  .phone {
+    margin-bottom: -5px;
+  }
+
+  .delete-phone-button {
+    margin-right: -7px;
+  }
+}
+
 
 .button-text-icon {
 
