--- a/src/app/shared/components/student-filters/student-filters.component.html
+++ b/src/app/shared/components/student-filters/student-filters.component.html
@@ -1,54 +1,58 @@
-<div class="mb-1">
-  <div *ngIf="headerService.searchStatus">
+<div class="mb-q">
 
-    <!-- Filter -->
-    <div fxLayout="row" fxLayoutAlign="space-between center">
-      <mat-form-field [appearance]="'inputAppearance' | settingValue">
-        <mat-label>{{'SEARCH_STUDENT' | translate}}</mat-label>
-        <input id="searchInputFilter" matInput [(ngModel)]="studentFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_STUDENT' | translate}}" autocomplete="off">
-        <fa-icon *ngIf="!studentFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
-        <button class="reset-button" mat-button matSuffix *ngIf="studentFilter" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
-          <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
-        </button>
-      </mat-form-field>
-
-      <button class="reset-button ml-h mb-1" mat-button mat-icon-button attr.aria-label="{{'SORT_ALPHABETICALLY' | translate}}" [matTooltip]="'SORT_ALPHABETICALLY' | translate" [matTooltipShowDelay]="650" (click)="sort()">
-        <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'color-primary': sortDirection}" [icon]="sortDirection ? 'sort-alpha-down' : 'sort-alpha-up-alt'"></fa-icon>
+  <!-- Filter -->
+  <div fxLayout="row" fxLayoutAlign="space-between center">
+    <mat-form-field [appearance]="'inputAppearance' | settingValue">
+      <mat-label>{{'SEARCH_STUDENT' | translate}}</mat-label>
+      <input id="searchInputFilter" matInput [(ngModel)]="studentFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_STUDENT' | translate}}" autocomplete="off">
+      <fa-icon *ngIf="!studentFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
+      <button class="reset-button" mat-button matSuffix *ngIf="studentFilter" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
+        <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
       </button>
-    </div>
+    </mat-form-field>
 
-    <div class="selects" fxLayout="row" fxLayoutAlign="space-between center">
+    <!-- Sort -->
+    <button class="reset-button action-button ml-q mb-1" mat-button mat-icon-button attr.aria-label="{{'SORT_ALPHABETICALLY' | translate}}" [matTooltip]="'SORT_ALPHABETICALLY' | translate" [matTooltipShowDelay]="650" (click)="sort()">
+      <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'color-primary': sortDirection}" [icon]="sortDirection ? 'sort-alpha-down' : 'sort-alpha-up-alt'"></fa-icon>
+    </button>
 
-      <!-- Classroom -->
-      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="49">
-        <mat-label>{{'CLASSROOMS' | translate}}</mat-label>
-        <mat-select multiple [(ngModel)]="classroomsFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'CLASSROOMS' | translate}}">
-          <mat-option *ngFor="let classroom of classroomList" [value]="classroom.id">
-            {{classroom.name}}
-          </mat-option>
-        </mat-select>
-        <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="chalkboard"></fa-icon>
-      </mat-form-field>
+    <!-- Toggle filter button -->
+    <button class="menu-button action-button mb-1" mat-button mat-icon-button (click)="toggleFilters()" attr.aria-label="{{'ADVANCED_FILTERS' | translate}}" [matTooltip]="'ADVANCED_FILTERS' | translate" [matTooltipShowDelay]="650">
+      <fa-icon class="mat-icon-18 mat-hint" [ngClass]="{'color-primary': showFilters}" icon="filter"></fa-icon>
+    </button>
+  </div>
 
-      <!-- Subjects -->
-      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="49">
-        <mat-label>{{'FORM.SUBJECTS' | translate}}</mat-label>
-        <mat-select multiple [(ngModel)]="subjectsFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
-          <mat-option *ngFor="let subject of subjectList" [value]="subject.id">
-            {{subject.name}}
-          </mat-option>
-        </mat-select>
-        <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="book"></fa-icon>
-      </mat-form-field>
-    </div>
+  <div *ngIf="showFilters" class="selects" fxLayout="row" fxLayoutAlign="space-between center">
+
+    <!-- Classroom -->
+    <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="49">
+      <mat-label>{{'CLASSROOMS' | translate}}</mat-label>
+      <mat-select multiple [(ngModel)]="classroomsFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'CLASSROOMS' | translate}}">
+        <mat-option *ngFor="let classroom of classroomList" [value]="classroom.id">
+          {{classroom.name}}
+        </mat-option>
+      </mat-select>
+      <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="chalkboard"></fa-icon>
+    </mat-form-field>
+
+    <!-- Subjects -->
+    <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="49">
+      <mat-label>{{'FORM.SUBJECTS' | translate}}</mat-label>
+      <mat-select multiple [(ngModel)]="subjectsFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
+        <mat-option *ngFor="let subject of subjectList" [value]="subject.id">
+          {{subject.name}}
+        </mat-option>
+      </mat-select>
+      <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="book"></fa-icon>
+    </mat-form-field>
   </div>
 
   <!-- clean all filters -->
   <div *ngIf="studentFilter || sortDirection || classroomsFilter?.length || subjectsFilter?.length" fxLayout="row" fxLayoutAlign="space-between center">
     <span fxFlex></span>
     <button mat-button color="warn" class="badge badge-fill warn mat-small pointer" (click)="cleanFilters()">
-      {{'CLEAN_ALL_FILTERS' | translate}}
-      <fa-icon class="ml-q mat-icon-14" icon="times"></fa-icon>
+      <span class="mr-q"> {{'CLEAN_ALL_FILTERS' | translate}}</span>
+      <fa-icon class="mat-icon-14" icon="times"></fa-icon>
     </button>
   </div>
 </div>
