--- a/src/scss/animations.scss
+++ b/src/scss/animations.scss
@@ -1,28 +1,56 @@
 @import "scss/variables";
 
 .pulse {
-  border-radius: 50%;
-  cursor: pointer;
-  box-shadow: 0 0 0 rgba($main-color-dark, .4);
-  animation: pulse 1.7s infinite;
+  animation-duration: 1.6s;
+  animation-iteration-count: infinite;
+
+  &:not(.disabled) {
+    animation-name: pulse, pulse-main;
+  }
+
+  &.disabled {
+    animation-name: pulse, pulse-disable;
+  }
 }
 
 @keyframes pulse {
   0% {
-    box-shadow: 0 0 0 0 rgba($main-color-dark, .5);
     transform: scale(1);
   }
 
   30% {
-    transform: scale(1.1);
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes pulse-main {
+  0% {
+    box-shadow: 0 0 0 0 rgba($main-color-dark, .5);
   }
 
   50% {
-    box-shadow: 0 0 0 15px rgba($main-color-dark, 0);    
+    box-shadow: 0 0 0 18px rgba($main-color-dark, 0);
   }
 
   100% {
     box-shadow: 0 0 0 0 rgba($main-color-dark, 0);
-    transform: scale(1);
+  }
+}
+
+@keyframes pulse-disable {
+  0% {
+    box-shadow: 0 0 0 0 rgba(grey, .5);
+  }
+
+  50% {
+    box-shadow: 0 0 0 18px rgba(grey, 0);
+  }
+
+  100% {
+    box-shadow: 0 0 0 0 rgba(grey, 0);
   }
 }
