--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -16,6 +16,22 @@
   padding: var(--main-padding-size);
 }
 
+.padding-content-h {
+  padding-left: var(--main-padding-size);
+  padding-right: var(--main-padding-size);
+}
+
+.padding-content-v {
+  padding-top: var(--main-padding-size);
+  padding-bottom: var(--main-padding-size);
+}
+
+.stiky-top {
+  position: sticky !important;
+  top: 0;
+  z-index: 30;
+}
+
 .container-max {
   width: 100%;
   margin: 0 auto;
@@ -32,10 +48,6 @@
   &.xs {
     max-width: var(--main-xs-size);
   }
-}
-
-.mat-dialog-content {
-  overflow-x: hidden !important;
 }
 
 .aumente {
@@ -82,14 +94,6 @@
 .error fa-icon,
 .error-color {
   color: var(--other-error-color) !important;
-}
-
-mat-form-field {
-  fa-icon {
-    position: relative;
-    top: -4px;
-    margin-left: 0.5rem;
-  }
 }
 
 .button-close fa-icon {
@@ -165,42 +169,6 @@ mat-form-field {
     opacity: 1;
   }
 
-}
-
-// Editor
-.angular-editor {
-  width: 100%;
-  padding: 0 5px;
-  box-sizing: border-box;
-
-  .ck {
-
-    .ck-editor__editable_inline {
-      word-break: break-all;
-      min-height: 220px;
-      // max-height: 400px;
-      max-width: 100%;
-    }
-
-    .ck-editor__top .ck-sticky-panel .ck-toolbar,
-    .ck-editor__top .ck-sticky-panel .ck-toolbar.ck-rounded-corners {
-      border-radius: 5px 5px 0 0 !important;
-    }
-
-    .ck-editor__main {
-      & > .ck-editor__editable {
-        // background: map-get(map-get($colors, other), input-color);
-        background: transparent;
-        border-radius: 0 0 5px 5px !important;
-        border-width: 2px;
-
-        &.ck-focused {
-          border-width: 2px;
-          box-shadow: none;
-        }
-      }
-    }
-  }
 }
 
 // Link
