--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,6 @@
 @import "scss/animations";
 @import "scss/typography";
 @import "scss/components";
+@import "scss/modified-components";
 @import "scss/main";
 @import "~@alejdev/css-utilities/dist/style.min.css";
